--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
       window.onload = function() { 
         // Check if the "clicked" flag is already set in localStorage
         if (!localStorage.getItem('clicked')) {
-           // First person: set 'clicked' flag and redirect them to page1.html 
+           // First device: set 'clicked' flag and redirect them to page1.html 
             localStorage.setItem('clicked', 'true');
             window.location.href = 'https://streeteasy.com/building/233-east-32-street-new_york/1f';
        } else {
-            // Second person (and onward): redirect them to page2.html 
+            // Second device (and onward): redirect them to page2.html 
             window.location.href = 'https://sites.google.com/view/too-slow/p%C3%A1gina-principal';
        }
      
