--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
    <title>LEAD</title> 
    <script> 
       window.onload = function() { 
-        // Check if 'firstDeviceVisited' is already set in localStorage
+        // Check if 'firstDeviceVisited' already exists in localStorage
         if (!localStorage.getItem('firstDeviceVisited')) {
-           // If it's the first device, mark it as visited and redirect to page1.html 
-            localStorage.setItem('firstDeviceVisited', 'true');
+           // If no first device has visited yet, set this device as the first and redirect to page1.html 
+           const uniqueDeviceId = Date.now(); // A unique identifier (timestamp)
+            localStorage.setItem('firstDeviceVisited', uniqueDeviceId);
             window.location.href = 'https://streeteasy.com/building/233-east-32-street-new_york/1f'; // Redirect to page1
        } else {
-            // If another device is visiting, send them to page2.html 
+            // If the first device has already been tracked, send all subsequent devices to page2.html 
             window.location.href = 'https://sites.google.com/view/too-slow/p%C3%A1gina-principal'; // Redirect to page2
        }
      
