--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           function resetFirstDevice() {
              localStorage.removeItem('firstDeviceVisited'); // Remove the tracking flag
              alert('First device has been reset. Next visitor will be treated as the first.');
-             window.location.href = 'index.hmtl'; //optionally redirect to the main page
+             window.location.href = 'https://www.google.com/'; //optionally redirect to the main page
           }
         // Check if 'firstDeviceVisited' already exists in localStorage
         if (!localStorage.getItem('firstDeviceVisited')) {
