--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
    <meta charset="UTF-8"> 
    <meta name="viewport" content="width=device-width, initial-scale=1.0">     
    <title>LEAD</title> 
-   <script> 
-         <!-- A simple reset button -->
-         <button onclick="resetFirstDevice()">Reset Frist Visitor</button>
+   </head> 
+   <body>
+
+      <!-- A simple reset button -->
+      <button onclick="resetFirstDevice()">Reset Frist Visitor</button>
 
          <script>
           // Reset function to clear the localStorage and restart the visitor tracking
@@ -30,6 +32,5 @@
    </script>
  </head>
  <body> 
-    <p>Redirecting...</p> 
 </body> 
 </html>
