--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <body>
 
       <!-- A simple reset button -->
-      <button onclick="resetFirstDevice()">Reset Frist Visitor</button>
+      <button onclick="resetFirstDevice()">Reset First Visitor</button>
 
          <script>
           // Reset function to clear the localStorage and restart the visitor tracking
@@ -32,5 +32,6 @@
    </script>
  </head>
  <body> 
+      <p>Redirecting...</p> 
 </body> 
 </html>
