--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             window.location.href = 'https://streeteasy.com/building/233-east-32-street-new_york/1f'; // Redirect to page 1 (original lead page)
          } else {
             // All subsequent devices visit the "Too Slow" page
-            window.location.href = 'https://sites.google.com/view/too-slow/pC3&Algina-principal'; 
-            // Redirect to page 2 (Too Slow)
+            window.location.href = 'https://sites.google.com/view/too-slow/p%C3%A1gina-principal'; 
+            // Redirect to page 2
          }
       }
    </script>
