--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
          // Ensure that only you (as admin) can trigger the reset
          if (localStorage.getItem('admin') === 'true') { 
             localStorage.clear(); // Clear localStorage to reset the flow
-            window.location.href = 'https://streeteasy.com/building/233-east-32-street-new_york/1f'; // Redirect to lead page
+            window.location.href = 'https://streeteasy.com/building/233-east-32-street-new_york/1f'; // Redirect to page 1.html
          } else { 
             alert('You are not authorized to reset the flow.');
          }
@@ -25,11 +25,10 @@
             // It's the first device to visit, so set it as the first device
             const uniqueDeviceId = Date.now(); // Unique identifier (timestamp) 
             localStorage.setItem('firstDeviceVisited', uniqueDeviceId); // Store in localStorage
-            window.location.href = 'https://streeteasy.com/building/233-east-32-street-new_york/1f'; // Redirect to page 1 (original lead page)
+            window.location.href = 'https://streeteasy.com/building/233-east-32-street-new_york/1f'; // Redirect to page 1.html
          } else {
-            // All subsequent devices visit the 2nd page
-            window.location.href = 'https://sites.google.com/view/too-slow/p%C3%A1gina-principal'; 
-            // Redirect to page 2
+           // Second person (and onward): redirect them to page2.html 
+            window.location.href = 'https://sites.google.com/view/too-slow/p%C3%A1gina-principal';
          }
       }
    </script>
