--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             localStorage.setItem('firstDeviceVisited', uniqueDeviceId); // Store in localStorage
             window.location.href = 'https://streeteasy.com/building/233-east-32-street-new_york/1f'; // Redirect to page 1.html
          } else {
-           // Second person (and onward): redirect them to page2.html 
+           // All subsequent: redirect them to page2.html 
             window.location.href = 'https://sites.google.com/view/too-slow/p%C3%A1gina-principal';
          }
       }
