--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Redirect Logic</title>
+   <title>LEAD</title>
    <script>
       // Function to set a cookie 
       function setCookie(name, value, days) { 
